# senmcp

./: .env.example  .gitignore  .ruff.toml  Dockerfile.agent  Dockerfile.opendata  Dockerfile.services  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
data/services_catalog/: allocation_familiale.yml  bourse_etudes_superieures.yml  carte_identite_nationale.yml  carte_sejour_etranger.yml  certificat_residence.yml  creation_entreprise_individuelle.yml  enregistrement_naissance_tardive.yml  extrait_naissance.yml  immatriculation_vehicule.yml  permis_construire.yml
docs/: ADR-0001-architecture.md  ADR-0002-server-runtime.md  ADR-0003-ansd-ingestion-strategy.md  architecture-diagram.mmd  structured-content.md
tests/: conftest.py
tests/contract/: test_opendata_io.py  test_services_io.py
tests/integration/: test_mcp_http_and_interceptors.py  test_mcp_servers_stdio.py
tests/integration/mcp_opendata/: test_ansd_agridata_live_sources.py
tests/unit/mcp_core/: test_http_client.py
tests/unit/mcp_opendata/: test_ckan_adapter.py  test_usecases.py
tests/unit/mcp_services/: test_yaml_loader.py
tests/unit/mcp_trust/: test_policies.py
